# c-20-modules-private-code

./: CMakeLists.txt  LICENSE  test.cpp
impl/: CMakeLists.txt  mod_impl.cpp
impl/install/cxx_modules/: mod.ixx
impl/install/cxx_modules_bmi/: mod.pcm
impl/install/lib/cmake/mod/: mod-noconfig.cmake  mod.cmake
impl/install/lib/cmake/mod/cxx/: cxx-modules-noconfig.cmake  cxx-modules.cmake  target-mod-noconfig.cmake
